--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ repositories {
 dependencies {
     testImplementation 'io.rest-assured:rest-assured:4.3.0'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.6.1'
+    compileOnly group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
 }
 
 test {
